Todas las vista realizadas, sin funcionamiento de APIs

--- a/src/app/agregar-libros/agregar-libros.component.html
+++ b/src/app/agregar-libros/agregar-libros.component.html
@@ -1,1 +1,29 @@
-<p>agregar-libros works!</p>
+<div class="agregar-libro-container">
+    <h2>Agregar Libro</h2>
+    <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
+      <label for="name">Titulo</label>
+      <input id="name" formControlName="name" placeholder="Titulo del libro" type="text" />
+  
+      <label for="autor">Autor</label>
+      <input id="autor" formControlName="autor" placeholder="Autor del libro" type="text" />
+  
+      <label for="genero">Genero</label>
+      <input id="genero" formControlName="genero" placeholder="Genero del libro, aventura, acción, etc" type="text" />
+  
+      <label for="fecha">Fecha de lectura</label>
+      <input id="fecha" formControlName="fecha" placeholder="Fecha" type="date" />
+  
+      <label for="eleccion">Estado de lectura</label>
+      <select id="eleccion" formControlName="eleccion">
+        <option value="leído">Leído</option>
+        <option value="en progreso">En progreso</option>
+        <option value="no leído">No leído</option>
+      </select>
+  
+      <label for="descripcion">Reseña General</label>
+      <textarea id="descripcion" formControlName="descripcion" placeholder="Reseña"></textarea>
+  
+      <button type="submit" [disabled]="bookForm.invalid">Agregar Libro</button>
+    </form>
+  </div>
+  
