--- a/src/app/agregar-clubs/agregar-clubs.component.html
+++ b/src/app/agregar-clubs/agregar-clubs.component.html
@@ -1,1 +1,29 @@
-<p>agregar-clubs works!</p>
+<div class="agregar-club-container">
+    <h2>Craer Club</h2>
+    <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
+      <label for="name">Nombre del club</label>
+      <input id="name" formControlName="name" placeholder="Nombre para el club" type="text" />
+  
+      <label for="autor">Localización</label>
+      <input id="autor" formControlName="autor" placeholder="Localización del club" type="text" />
+  
+      <label for="genero">Miembros max</label>
+      <input id="genero" formControlName="genero" placeholder="Miembros maximo permitido" type="text" />
+  
+      <label for="fecha">Fecha de creación</label>
+      <input id="fecha" formControlName="fecha" placeholder="Fecha" type="date" />
+  
+      <label for="eleccion">Elegir Libro</label>
+      <select id="eleccion" formControlName="eleccion">
+        <option value="leído">Libro de la vida</option>
+        <option value="en progreso">La importancia de que todo te importe un carajo</option>
+        <option value="no leído">Querido yo. Vamos a etsra bien</option>
+      </select>
+  
+      <label for="descripcion">Reseña General</label>
+      <textarea id="descripcion" formControlName="descripcion" placeholder="Reseña"></textarea>
+  
+      <button type="submit" [disabled]="bookForm.invalid">Crear</button>
+    </form>
+  </div>
+  
