--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -1,1 +1,18 @@
-<p>header-component works!</p>
+<div class="contenedor-header">
+    <header>
+        <div class="logo">
+            <a href="/">Reading Club</a>
+        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="/">Mis Libros</a></li>
+                <li><a href="/agregarLibro">Agregar Libro</a></li>
+                <li><a href="/agregarClub">Crear Club</a></li>
+                <li><a href="misClubs">Ver Clubs</a></li>
+            </ul>
+        </nav>
+        <div class="nav-responsive">
+            <i></i>
+        </div>
+    </header>
+</div>
