--- a/src/app/mis-clubs/mis-clubs.component.html
+++ b/src/app/mis-clubs/mis-clubs.component.html
@@ -1,1 +1,24 @@
-<p>mis-clubs works!</p>
+<div>
+    <div class="Mis-clubs-content">
+      <h2>Mis Clubs</h2>
+      <div class="clubs-grid">
+        <div *ngFor="let club of clubs" class="club-card">
+          <p>{{ club.title }}</p>
+        </div>
+        <!-- Tarjeta para agregar un nuevo libro -->
+        <div class="agregar-club" (click)="agregarClub()">
+          <p>+</p>
+        </div>
+      </div>
+    </div>
+    <div class="Mis-clubs-content">
+        <h2>Otros Clubs</h2>
+        <div class="clubs-grid">
+          <div *ngFor="let club of otherClubs" class="club-card">
+            <p>{{ club.title }}</p>
+          </div>
+          
+        </div>
+      </div>
+  </div>
+  
