--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -5,10 +5,10 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="/">Mis Libros</a></li>
-                <li><a href="/agregarLibro">Agregar Libro</a></li>
-                <li><a href="/agregarClub">Crear Club</a></li>
-                <li><a href="misClubs">Ver Clubs</a></li>
+                <li><a routerLink="/">Mis Libros</a></li>
+                <li><a routerLink="/agregarLibro">Agregar Libro</a></li>
+                <li><a routerLink="/agregarClub">Crear Club</a></li>
+                <li><a routerLink="misClubs">Ver Clubs</a></li>
             </ul>
         </nav>
         <div class="nav-responsive">
