--- a/src/app/mis-clubs/mis-clubs.component.html
+++ b/src/app/mis-clubs/mis-clubs.component.html
@@ -3,7 +3,7 @@
       <h2>Mis Clubs</h2>
       <div class="clubs-grid">
         <div *ngFor="let club of clubs" class="club-card">
-          <p>{{ club.title }}</p>
+          <p>{{ club.name }}</p>
         </div>
         <!-- Tarjeta para agregar un nuevo libro -->
         <div class="agregar-club" (click)="agregarClub()">
@@ -14,8 +14,8 @@
     <div class="Mis-clubs-content">
         <h2>Otros Clubs</h2>
         <div class="clubs-grid">
-          <div *ngFor="let club of otherClubs" class="club-card">
-            <p>{{ club.title }}</p>
+          <div *ngFor="let club of clubs" class="club-card">
+            <p>{{ club.name }}</p>
           </div>
           
         </div>
