--- a/src/app/agregar-clubs/agregar-clubs.component.html
+++ b/src/app/agregar-clubs/agregar-clubs.component.html
@@ -1,29 +1,26 @@
 <div class="agregar-club-container">
-    <h2>Craer Club</h2>
-    <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
-      <label for="name">Nombre del club</label>
-      <input id="name" formControlName="name" placeholder="Nombre para el club" type="text" />
-  
-      <label for="autor">Localización</label>
-      <input id="autor" formControlName="autor" placeholder="Localización del club" type="text" />
-  
-      <label for="genero">Miembros max</label>
-      <input id="genero" formControlName="genero" placeholder="Miembros maximo permitido" type="text" />
-  
-      <label for="fecha">Fecha de creación</label>
-      <input id="fecha" formControlName="fecha" placeholder="Fecha" type="date" />
-  
-      <label for="eleccion">Elegir Libro</label>
-      <select id="eleccion" formControlName="eleccion">
-        <option value="leído">Libro de la vida</option>
-        <option value="en progreso">La importancia de que todo te importe un carajo</option>
-        <option value="no leído">Querido yo. Vamos a etsra bien</option>
-      </select>
-  
-      <label for="descripcion">Reseña General</label>
-      <textarea id="descripcion" formControlName="descripcion" placeholder="Reseña"></textarea>
-  
-      <button type="submit" [disabled]="bookForm.invalid">Crear</button>
-    </form>
-  </div>
-  
+  <h2>Crear Club</h2>
+  <form [formGroup]="clubForm" (ngSubmit)="onSubmit()">
+    <label for="name">Nombre del club</label>
+    <input id="name" formControlName="name" placeholder="Nombre para el club" type="text" />
+
+    <label for="location">Localización</label>
+    <input id="location" formControlName="location" placeholder="Localización del club" type="text" />
+
+    <label for="members">Miembros max</label>
+    <input id="members" formControlName="members" placeholder="Miembros máximo permitido" type="number" />
+
+    <label for="date">Fecha de creación</label>
+    <input id="date" formControlName="date" placeholder="Fecha" type="date" />
+
+    <label for="idBook">Elegir Libro</label>
+    <select id="idBook" formControlName="idBook">
+      <option *ngFor="let book of books" [value]="book.id">{{ book.title }}</option>
+    </select>
+
+    <label for="description">Reseña General</label>
+    <textarea id="description" formControlName="description" placeholder="Reseña"></textarea>
+
+    <button type="submit" [disabled]="clubForm.invalid">Crear club</button>
+  </form>
+</div>
