--- a/src/app/ver-libros/ver-libros.component.html
+++ b/src/app/ver-libros/ver-libros.component.html
@@ -1,12 +1,12 @@
-<div class="container-libro">
-    <h1>{{ clubInfo.title }}</h1>
-  
-    <div class="card-libro">
-      <h2>{{ clubInfo.title }}</h2>
-      <p>Autor: {{ clubInfo.autor }}</p>
-      <p>Genero: {{ clubInfo.genero }}</p>
-      <p>Proreso: {{clubInfo.estado}}</p>
-      <p>Fecha de creación: {{ clubInfo.fecha | date:'dd/MM/yyyy' }}</p>
-      <a href="#" class="exit-libro">{{ clubInfo.exit }}</a>
-    </div>
+<div class="container-libro" *ngIf="libro">
+  <h1>{{ libro.title }}</h1>
+
+  <div class="card-libro">
+    <h2>{{ libro.title }}</h2>
+    <p>Autor: {{ libro.autor }}</p>
+    <p>Genero: {{ libro.genero }}</p>
+    <p>Progreso: {{ libro.state }}</p>
+    <p>Fecha de creación: {{ libro.date | date:'dd/MM/yyyy' }}</p>
+    <p>Reseña: {{ libro.review }}</p>
+  </div>
 </div>
