CRUD completo en libros, estilos y errores arreglados

--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -1,7 +1,7 @@
 <div class="contenedor-header">
     <header>
         <div class="logo">
-            <a href="/">Reading Club</a>
+            <a routerLink="/">Reading Club</a>
         </div>
         <nav class="nav">
             <ul>
