--- a/src/app/mis-libros/mis-libros.component.html
+++ b/src/app/mis-libros/mis-libros.component.html
@@ -1,7 +1,7 @@
 <div class="Mis-libros-content">
   <h2>Mis Libros</h2>
   <div class="libros-grid">
-    <div *ngFor="let libro of libros" class="libro-card">
+    <div *ngFor="let libro of libros" class="libro-card" (click)="verLibro(libro.id)">
       <p>{{ libro.title }}</p>
     </div>
     <!-- Tarjeta para agregar un nuevo libro -->
