Crud en clubs terminado, footer añadido y estilos corregidos

--- a/src/app/footer-component/footer-component.component.html
+++ b/src/app/footer-component/footer-component.component.html
@@ -1,1 +1,12 @@
-<p>footer-component works!</p>
+<footer>
+    <div class="arriba" (click)="scrollToTop()">
+        <fa-icon [icon]="faChevronUp"></fa-icon>
+    </div>
+    <div class="redes">
+        <a href="#"><fa-icon [icon]="faFacebook"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faTwitter"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faGithub"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faLinkedin"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="faRss"></fa-icon></a>
+    </div>
+  </footer>
