--- a/src/app/ver-clubs/ver-clubs.component.css
+++ b/src/app/ver-clubs/ver-clubs.component.css
@@ -35,6 +35,7 @@
     text-decoration: none;
     color: black;
     font-weight: bold;
+    margin: 20px;
   }
   
   .chat-section {
@@ -59,22 +60,91 @@
     margin-top: 30px;
   }
   
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+  input {
+    background-color: transparent;
+    border: 1px solid gray;
+    padding: 5px;
+    font-size: 16px;
+    color: black;
+    outline: none;
+  }
+  
+  textarea{
+    background-color: transparent;
+    border: 1 px solid gray;
+    padding: 5px;
+    font-size: 16px;
+    color: black;
+    outline: none;
+  }
+  
+  textarea:focus{
+    border-color: #825B32;
+  }
+  
+  input:focus {
+    border-color: #825B32;
   }
   
   button {
-    background-color: black;
-    color: white;
-    padding: 10px 20px;
+    background-color: #825B32;
     border: none;
-    border-radius: 5px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 16px;
     cursor: pointer;
-    margin-top: 10px;
-    width: 100%;
-    
+    border-radius: 5px;
+    margin: 5px;
   }
   
+  button:hover{
+    background-color: #684421;
+  }
+  
+  button:focus{
+    outline: none;
+  }
+  
+
+
+
+  /* Estilos de la modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.modal-content button {
+  background-color: #825B32;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  margin: 0 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-content button:hover {
+  background-color: #684421;
+}
