--- a/src/app/ver-clubs/ver-clubs.component.html
+++ b/src/app/ver-clubs/ver-clubs.component.html
@@ -1,15 +1,36 @@
-<div class="container">
-    <h1>{{ clubInfo.title }}</h1>
+<div class="container" *ngIf="clubInfo">
+    <h1>{{ clubInfo.name }}</h1>
   
     <div class="card">
-      <h2>{{ clubInfo.title }}</h2>
-      <p>Localización: {{ clubInfo.localizacion }}</p>
-      <p>Miembros: {{ clubInfo.miembros }}</p>
-      <p>Fecha de creación: {{ clubInfo.fecha | date:'dd/MM/yyyy' }}</p>
-      <a href="#" class="exit">{{ clubInfo.exit }}</a>
+      <h2>
+        <span *ngIf="!editMode">{{ clubInfo.name }}</span>
+        <input *ngIf="editMode" [(ngModel)]="editableClub.name" type="text" />
+      </h2>
+      <p>
+        Localización: 
+        <span *ngIf="!editMode">{{ clubInfo.location }}</span>
+        <input *ngIf="editMode" [(ngModel)]="editableClub.location" type="text" />
+      </p>
+      <p>Miembros: 
+        <span *ngIf="!editMode">{{ clubInfo.members }}</span>
+        <input *ngIf="editMode" [(ngModel)]="editableClub.members" type="text" />
+      </p>
+      <p>Fecha de creación: {{ clubInfo.date | date:'dd/MM/yyyy' }}
+      </p>
+      <p>Descripción: 
+        <span *ngIf="!editMode">{{ clubInfo.description }}</span>
+        <input *ngIf="editMode" [(ngModel)]="editableClub.description" type="text" />
+      </p>
+      <a routerLink="/misClubs" class="exit">Salir del club</a>
+      <button *ngIf="!editMode" (click)="edit()">Editar</button>
+      <button *ngIf="clubInfo" (click)="openModal()">Eliminar</button>
+      <div *ngIf="editMode">
+        <button (click)="save()">Aceptar</button>
+        <button (click)="cancel()">Cancelar</button>
+      </div>
     </div>
-  
-    <h3>Chat de Discusión:</h3>
+  //aqui ayudame 
+    <h3>Chat de Discusión:</h3> 
     <div class="chat-section">
       <div *ngFor="let comentario of comentarios" class="comentario">
         <h4>🗣 {{ comentario.usuario }}</h4>
@@ -21,6 +42,15 @@
         <textarea id="comentario" rows="3"></textarea>
         <button type="submit">Submit</button>
       </div>
+    </div>
+  </div>
+
+
+  <div class="modal" *ngIf="showModal">
+    <div class="modal-content">
+      <p>¿Estás seguro de que quieres eliminar este club?</p>
+      <button (click)="confirmDelete()">Sí</button>
+      <button (click)="closeModal()">No</button>
     </div>
   </div>
   
