Comentarios funcionando, mode beta

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="login-box">
+        <h1>Inicia Sesión</h1>
+        <form>
+            <label for="username">Usuario</label>
+            <input type="text" id="username" placeholder="Usuario" />
+
+            <label for="password">Contraseña</label>
+            <div class="password-container">
+                <input type="password" id="password" placeholder="Escriba una contraseña" />
+                <button type="button" id="toggle-password">&#128065;</button>
+            </div>
+
+            <button type="submit" class="login-btn">Iniciar Sesión</button>
+        </form>
+    </div>
+</div>
