--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="showHeaderFooter">
 <app-header-component></app-header-component>
+</div>
 <router-outlet></router-outlet>
+<div *ngIf="showHeaderFooter">
 <app-footer-component></app-footer-component>
+</div>
