--- a/src/app/registrer/registrer.component.html
+++ b/src/app/registrer/registrer.component.html
@@ -1,1 +1,21 @@
-<p>registrer works!</p>
+<div class="register-container">
+    <div class="register-box">
+      <h1>Registrarse</h1>
+      <form (ngSubmit)="register()">
+        <label for="username">Usuario</label>
+        <input type="text" id="username" placeholder="Usuario" [(ngModel)]="username" name="username" required />
+  
+        <label for="password">Contraseña</label>
+        <div class="password-container-register">
+          <input type="password" id="password" placeholder="Escriba una contraseña" [(ngModel)]="password" name="password" required />
+          <button type="button" id="toggle-password">&#128065;</button>
+        </div>
+        <div>
+          <a routerLink="/login">¿Ya tienes una cuenta?</a>
+        </div>
+  
+        <button type="submit" class="register-btn">Registrarse</button>
+      </form>
+    </div>
+  </div>
+  
