--- a/src/app/ver-clubs/ver-clubs.component.html
+++ b/src/app/ver-clubs/ver-clubs.component.html
@@ -15,8 +15,7 @@
       <span *ngIf="!editMode">{{ clubInfo.members }}</span>
       <input *ngIf="editMode" [(ngModel)]="editableClub.members" type="text" />
     </p>
-    <p>Fecha de creación: {{ clubInfo.date | date:'dd/MM/yyyy' }}
-    </p>
+    <p>Fecha de creación: {{ clubInfo.date | date:'dd/MM/yyyy' }}</p>
     <p>Descripción:
       <span *ngIf="!editMode">{{ clubInfo.description }}</span>
       <input *ngIf="editMode" [(ngModel)]="editableClub.description" type="text" />
@@ -33,7 +32,7 @@
   <h3>Chat de Discusión:</h3>
   <div class="chat-section">
     <div *ngFor="let comentario of comentarios" class="comentario">
-      <h4>🗣 Joseph</h4>
+      <h4>🗣 {{ comentario.userName }}</h4>
       <p>{{ comentario.comments }}</p>
     </div>
 
