--- a/src/app/header-component/header-component.component.css
+++ b/src/app/header-component/header-component.component.css
@@ -4,43 +4,46 @@
     width: 100%;
     top: 0;
     left: 0;
-}
-
-.contenedor-header header{
+  }
+  
+  .contenedor-header header {
     max-width: 1100px;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 20px;
-}
-
-.contenedor-header header .logo a {
-    font-family: "Righteous";
+  }
+  
+  .contenedor-header header .logo a {
+    font-family: 'Righteous';
     font-size: 36px;
     color: #FFFFFF;
     text-decoration: none;
-}
-
-.contenedor-header header ul {
+  }
+  
+  .contenedor-header header ul {
     display: flex;
     list-style: none;
-}
-
-.contenedor-header header nav ul li a {
-    text-align: none;
+    margin: 0;
+    padding: 0;
+    flex-grow: 1; /* Aumentar la flexibilidad para tomar el espacio restante */
+  }
+  
+  
+  .contenedor-header header nav ul li a {
+    text-decoration: none;
     color: aliceblue;
-    margin: 0 15px;
     padding: 4px;
     transition: 0.5s;
-    text-decoration: none;
-}
-
-.contenedor-header header nav ul li a:hover {
+    margin-left: 70px;
+  }
+  
+  .contenedor-header header nav ul li a:hover {
     color: #AF8F6F;
-}
-
-.nav-responsive {
+  }
+  
+  .nav-responsive {
     background-color: #ffffff;
     color: #fff;
     padding: 5px 10px;
@@ -48,5 +51,26 @@
     cursor: pointer;
     display: none;
   }
-
-/* SECCION RESPONSIVE */
+  
+  .nav-icon-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Mueve los íconos a la derecha */
+  }
+  
+  .nav-icon-profile, .nav-icon-logout {
+    display: inline-block;
+    margin-left: 15px;
+    cursor: pointer;
+  }
+  
+  .nav-icon-profile fa-icon, .nav-icon-logout fa-icon {
+    color: #fff;
+    font-size: 24px;
+    transition: color 0.3s;
+  }
+  
+  .nav-icon-profile fa-icon:hover, .nav-icon-logout fa-icon:hover {
+    color: #AF8F6F;
+  }
+  
